--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "unit": "ava test/*.test.js",
     "test": "npm run lint && npm run unit",
     "lint": "standard lib/* test/*.test.js benchmark/*",
-    "coveralls": "nyc npm test && nyc report --reporter=text-lcov | coveralls",
+    "coveralls": "nyc npm test",
     "coverage": "nyc npm test && nyc report --reporter=html",
     "benchmark": "node benchmark/benchmark.js"
   },
@@ -16,7 +16,6 @@
   "devDependencies": {
     "ava": "^2.4.0",
     "benchmark": "^2.1.4",
-    "coveralls": "^3.0.2",
     "express": "^4.16.3",
     "i18next": "^17.0.0",
     "nyc": "^14.1.1",
