move benchmark dependencies to separate package.json

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "unit": "ava test/*.test.js",
     "test": "npm run lint && npm run unit",
-    "lint": "standard lib/* test/*.test.js benchmark/*",
+    "lint": "standard lib/* test/*.test.js benchmark/*.js",
     "coveralls": "nyc npm test",
     "coverage": "nyc npm test && nyc report --reporter=html",
     "benchmark": "node benchmark/benchmark.js"
@@ -15,9 +15,7 @@
   "license": "MIT",
   "devDependencies": {
     "ava": "^2.4.0",
-    "benchmark": "^2.1.4",
     "express": "^4.16.3",
-    "i18next": "^17.0.0",
     "nyc": "^14.1.1",
     "standard": "^13.0.1"
   },
